Added gameplay DTO and matching frontend changes