@@ -1,11 +1,13 @@
 package com.bol.games.mancala.controller;
 
+import com.bol.games.mancala.controller.dto.GamePlay;
+import com.bol.games.mancala.controller.dto.Message;
+import com.bol.games.mancala.service.MancalaGamePlayService;
 import com.bol.games.mancala.util.TestMessageChannel;
 import com.bol.games.mancala.model.GameStatus;
 import com.bol.games.mancala.model.MancalaGame;
 import com.bol.games.mancala.model.Player;
 import com.bol.games.mancala.repository.MancalaRepository;
-import com.bol.games.mancala.service.MancalaGamePlayValidationService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -14,7 +16,6 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.context.support.StaticApplicationContext;
-import org.springframework.messaging.Message;
 import org.springframework.messaging.MessageChannel;
 import org.springframework.messaging.SubscribableChannel;
 import org.springframework.messaging.converter.MappingJackson2MessageConverter;
@@ -25,8 +26,8 @@ import org.springframework.messaging.simp.stomp.StompCommand;
 import org.springframework.messaging.simp.stomp.StompHeaderAccessor;
 import org.springframework.messaging.support.MessageBuilder;
 
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
@@ -40,19 +41,18 @@ public class MancalaWebSocketControllerIntegrationTests {
     @Mock
     private MancalaRepository mancalaRepository;
     @InjectMocks
-    private MancalaGamePlayValidationService validationService;
-    private TestMessageChannel clientOutboundChannel;
+    private MancalaGamePlayService gamePlayService;
     private TestAnnotationMethodHandler annotationMethodHandler;
-    private final MancalaGame game = new MancalaGame(null);
+    private final MancalaGame game = new MancalaGame();
 
     @BeforeEach
     public void setup() {
-        MancalaWebSocketController controller = new MancalaWebSocketController(validationService, simpMessagingTemplate);
-        clientOutboundChannel = new TestMessageChannel();
+        MancalaWebSocketController controller = new MancalaWebSocketController(gamePlayService, simpMessagingTemplate);
+        TestMessageChannel clientOutboundChannel = new TestMessageChannel();
         annotationMethodHandler = new TestAnnotationMethodHandler(
                 new TestMessageChannel(), clientOutboundChannel, new SimpMessagingTemplate(new TestMessageChannel()));
         annotationMethodHandler.registerHandler(controller);
-        annotationMethodHandler.setDestinationPrefixes(Arrays.asList("/app"));
+        annotationMethodHandler.setDestinationPrefixes(List.of("/app"));
         annotationMethodHandler.setMessageConverter(new MappingJackson2MessageConverter());
         annotationMethodHandler.setApplicationContext(new StaticApplicationContext());
         annotationMethodHandler.afterPropertiesSet();
@@ -60,34 +60,34 @@ public class MancalaWebSocketControllerIntegrationTests {
 
     @Test
     public void WebSocketController_WhenChatMessage_RoutesWithoutException() throws Exception {
-        com.bol.games.mancala.controller.dto.Message text = new com.bol.games.mancala.controller.dto.Message("Hello", "Test");
+        Message text = new Message("Hello", "Test");
         byte[] payload = new ObjectMapper().writeValueAsBytes(text);
         StompHeaderAccessor headers = StompHeaderAccessor.create(StompCommand.SEND);
         headers.setDestination("/app/messaging.some-game-id");
         headers.setSessionId("0");
         headers.setSessionAttributes(new HashMap<>());
-        Message<byte[]> message = MessageBuilder.withPayload(payload).setHeaders(headers).build();
-        assertDoesNotThrow(() -> {
-            this.annotationMethodHandler.handleMessage(message);
-        }, "Exception not thrown");
+        org.springframework.messaging.Message<byte[]> message = MessageBuilder.withPayload(payload).setHeaders(headers).build();
+        assertDoesNotThrow(() -> this.annotationMethodHandler.handleMessage(message), "Exception not thrown");
     }
 
     @Test
     public void WebSocketController_WhenGamePlay_RoutesWithoutException() throws Exception {
-        game.initialiseBoardToNewGame();
+        game.initialiseBoardToStartNewGame();
         game.setGamePlayStatus(GameStatus.IN_PROGRESS);
         doReturn(game).when(mancalaRepository).findGame(any(String.class));
 
-        byte[] payload = new ObjectMapper().writeValueAsBytes(game);
+        GamePlay gamePlay = new GamePlay(game.getGameId(), GameStatus.IN_PROGRESS, 0);
+
+        byte[] payload = new ObjectMapper().writeValueAsBytes(gamePlay);
 
         StompHeaderAccessor headers = StompHeaderAccessor.create(StompCommand.SEND);
-        headers.setDestination("/app/gameplay." + game.getGameId());
+        headers.setDestination("/app/gameplay." + gamePlay.getGameId());
         headers.setSessionId("0");
         headers.setSessionAttributes(new HashMap<>());
-        Message<byte[]> message = MessageBuilder.withPayload(payload).setHeaders(headers).build();
+        org.springframework.messaging.Message<byte[]> message = MessageBuilder.withPayload(payload).setHeaders(headers).build();
 
         this.annotationMethodHandler.handleMessage(message);
-        MancalaGame validatedGame = validationService.validate(game);
+        MancalaGame validatedGame = gamePlayService.executeGameRules(gamePlay);
         assertThat(validatedGame.getActivePlayer()).isEqualTo(Player.PLAYER_ONE);
         assertThat(validatedGame.getGamePlayStatus()).isEqualTo(GameStatus.IN_PROGRESS);
     }
